--- a/config.yaml
+++ b/config.yaml
@@ -23,4 +23,4 @@ md_wechat_path: './docs/wechat.md'
 # keywords to search
 keywords:
     "SLAM": 
-        filters: ["SLAM", "Visual Odometry"]
+        filters: ["MVS", "3DGS"]
