Change keyword from 'SLAM' to '3DGS'

--- a/config.yaml
+++ b/config.yaml
@@ -22,5 +22,5 @@ md_wechat_path: './docs/wechat.md'
 
 # keywords to search
 keywords:
-    "SLAM": 
+    "3DGS": 
         filters: ["MVS", "3DGS"]
