--- a/config.yaml
+++ b/config.yaml
@@ -21,6 +21,30 @@ md_gitpage_path: './docs/index.md'
 md_wechat_path: './docs/wechat.md'
 
 # keywords to search
+# keywords to search
 keywords:
-    "3DGS": 
-        filters: ["MVS", "3DGS"]
+    "SLAM": 
+        filters: ["SLAM", "Visual Odometry"]
+    "SFM":
+        filters: ["SFM", "Structure from Motion"]
+    "Visual Localization":
+        filters: ["Visual Localization","Camera Localization",
+                  "Camera Re-localisation","Loop Closure Detection",
+                  "visual place recognition","image retrieval"]
+    "Keypoint Detection":
+        filters: ["Keypoint Detection", "Feature Descriptor"]
+    "Image Matching":
+        filters: ["Image Matching", "Keypoint Matching", 
+                  "Line Segment Detection", "Local Feature Matching"]
+    "NeRF":
+        filters: ["NeRF"]
+    "3DGS":
+        filters: ["3DGS"]
+    "MVS":
+        filters: ["MVS", "Multi-View Stereo"]
+    "DUST3R":
+        filters: ["DUST3R", "Dust3r"]
+    "3D Understanding":
+        filters: ["3D understanding", "3D scene understanding"]
+    "VLM":
+        filters: ["VLM", "Vision Language Model"]
